slice/testdata/full/ingress-hello-docker-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-docker-ing
spec:
  ingressClassName: nginx
  rules:
    - host: foo.bar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-docker-svc
                port:
                  number: 8000
