slice/testdata/full/service-hello-docker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-docker-svc
spec:
  selector:
    app: hello-docker-app
  ports:
    - port: 8000
